Project

General

Profile

Actions

Bug #15626

closed

s3website:set_bucket_website lacks AWS4 support

Added by Robin Johnson almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
rgw, s3website, aws4
Backport:
jewel
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2016-04-26 16:53:30.831292 7f02a57e2700 10 canonical headers format = host:demo-s3website-vhost.orbis-terrarum.net.dho-dev.dreamobjects.net
x-amz-content-sha256:3fcf37205b114f03a910d11d74206358f1681381f0f9498b25aa1cc65e168937
x-amz-date:20160426T235330Z

2016-04-26 16:53:30.831300 7f02a57e2700 10 body content detected... delaying v4 auth
2016-04-26 16:53:30.831302 7f02a57e2700 10 ERROR: AWS4 completion for this operation NOT IMPLEMENTED
2016-04-26 16:53:30.831305 7f02a57e2700 10 failed to authorize request
2016-04-26 16:53:30.831307 7f02a57e2700 20 handler->ERRORHANDLER: err_no=-2201 new_err_no=-2201
2016-04-26 16:53:30.831423 7f02a57e2700 5 nothing to log for operation
2016-04-26 16:53:30.831431 7f02a57e2700 2 req 4:0.004811:s3:PUT /:set_bucket_website:op status=0
2016-04-26 16:53:30.831436 7f02a57e2700 2 req 4:0.004816:s3:PUT /:set_bucket_website:http status=501


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #15801: jewel: s3website:set_bucket_website lacks AWS4 supportResolvedYehuda SadehActions
Actions #1

Updated by Javier M. Mellid almost 8 years ago

Hi Robin, operations with body require a specific aws4 completion routine. You just hit the checking to detect that need with the new operations being added. Do you have some s3-test or custom script raising the issue? Thanks!

Actions #2

Updated by Javier M. Mellid almost 8 years ago

Robin, I think I am hitting one bug (405 error) related to website support before reaching this issue so I can't reproduce it. Anyway I think this PR could resolve the current issue:

https://github.com/ceph/ceph/pull/8788

Could you test/confirm it?

Thanks!

Actions #3

Updated by Robin Johnson almost 8 years ago

I confirm PR8788 fixes the issue, please merge.

Actions #4

Updated by Robin Johnson almost 8 years ago

  • Status changed from New to Fix Under Review
Actions #5

Updated by Yehuda Sadeh almost 8 years ago

  • Backport set to jewel
Actions #6

Updated by Yehuda Sadeh almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #7

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #15801: jewel: s3website:set_bucket_website lacks AWS4 support added
Actions #8

Updated by Nathan Cutler almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF