rgw: add AWS4 completion support for RGW_OP_SET_BUCKET_WEBSITE

Fixes: http://tracker.ceph.com/issues/15626

Signed-off-by: Javier M. Mellid <jmunhoz@igalia.com>
(cherry picked from commit 05373354e4725c3fc675df652fbf97da26160bcb)